# Scipion-Bridge

./: .gitignore  <scipion_bridge.typed.proxy.Output object at 0x727960e39070>  README.md  pyproject.toml
.github/workflows/: python-app.yml
docs/source/: conf.py  examples.rst  index.rst
docs/source/examples/: blocres_eval.ipynb  demo.ipynb  params.xmd
docs/source/examples/utils/: download.py
docs/source/scipion_bridge/: foreign_functions.rst  index.rst  proxies.rst
src/scipion_bridge/: external_call.py  func_params.py  proxy.py
src/scipion_bridge/core/typed/: dijkstra.py  proxy.py  resolve.py
src/scipion_bridge/core/utils/: arc.py  external_call.py  func_params.py
src/scipion_bridge/ffi/: blocres.py  scipion.py
src/scipion_bridge/typed/: __init__.py  array.py  common.py  dijkstra.py  proxy.py  resolve.py  volume.py
src/scipion_bridge/utils/: arc.py
src/scipion_bridge/utils/environment/: __init__.py  cmd_exec.py  container.py  temp_files.py
src/scipion_bridge/visualize/: __init__.py  base.py  registry.py  volume.py
src/scipion_bridge/xmipp/: ffi.py
tests/scipion_bridge/: mock_exec.py  test_arc.py  test_cmd_exec.py  test_external_call.py  test_legacy_proxy.py
tests/scipion_bridge/typed/: resolve_graph.json  test_dijkstra.py  test_proxy_typed.py  test_resolve.py
