[tool.poetry]
name = "scipion-bridge"
version = "0.1.0"
description = "A Python tool to convert validation data on VRS to a format compatible with 3DBionotes"
authors = ["Max Zoech <maximilian.zoech@cnb.csic.es>"]
readme = "README.md"
packages = [{ include = "scipion_bridge", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.8"
dependency-injector = ">=4.48.1,<5.0.0"
autopep8 = ">=2.3.0,<3.0.0"
networkx = ">=3.1.0,<4.0.0"
tabulate = "^0.9.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-mock = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"
